--- a/ios/Covid1m/Info.plist
+++ b/ios/Covid1m/Info.plist
@@ -59,6 +59,15 @@
 	<string>Give Covid-1m periences permission to access your photos</string>
 	<key>NSRemindersUsageDescription</key>
 	<string>Allow Covid-1m to access your reminders</string>
+	<key>UIBackgroundModes</key>
+	<array>
+		<string>audio</string>
+		<string>bluetooth-central</string>
+		<string>bluetooth-peripheral</string>
+		<string>fetch</string>
+		<string>location</string>
+		<string>processing</string>
+	</array>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIRequiredDeviceCapabilities</key>
