--- a/ios/Podfile
+++ b/ios/Podfile
@@ -45,4 +45,6 @@ target 'Covid1m' do
   use_native_modules!
   pod 'RNCPushNotificationIOS', :path => '../node_modules/@react-native-community/push-notification-ios'
 
+  pod 'RNBackgroundFetch', :path => '../node_modules/react-native-background-fetch'
+
 end
