--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
     "react-native": "~0.61.4",
+    "react-native-background-fetch": "^2.0.8",
+    "react-native-background-task": "^0.2.1",
     "react-native-ble-manager": "^7.2.0",
     "react-native-elements": "^1.2.7",
     "react-native-geolocation-service": "^4.0.0",
